# ag2latin

./: .gitignore  LICENSE  README.md  ag2latin.py  pyproject.toml
tests/: test_ag2latin.py
