[project]
name = "ag2latin"
version = "0.1.0"
description = "Transliterate Ancient Greek text to Latin characters"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Patrick J. Burns", email = "patrick@diyclassics.org" }
]
requires-python = ">=3.9"
keywords = ["ancient greek", "latin", "transliteration", "classics"]

[project.scripts]
ag2latin = "ag2latin:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
