[project]
name = "ag2latin"
version = "0.2.0"
description = "Transliterate Ancient Greek text to Latin characters"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Patrick J. Burns", email = "patrick@diyclassics.org" }
]
requires-python = ">=3.9"
keywords = ["ancient greek", "latin", "transliteration", "classics", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
ag2latin = "ag2latin:main"

[project.urls]
Repository = "https://github.com/diyclassics/ag2latin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
